Corregido index.html y agregado juego de cartas

--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
         </div>
     </div>
     
+    <div class="project-card">
+      <h2>Juego de cartas</h2>
+      <p>Juego de cartas</p>
+      <a href="juego-de-cartas/index.html">Ver proyecto</a>
+    </div>
+
+
     <footer>
         <p>Estos proyectos son parte de mi aprendizaje en desarrollo web frontend.</p>
     </footer>
