se agrego un cambio de luces

--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
       <a href="juego-de-cartas/index.html">Ver proyecto</a>
     </div>
 
+    <div class="project-card">
+      <h2>Switch light</h2>
+      <p>Cambio de luz</p>
+      <a href="switch-light/index.html">Ver proyecto</a>
+    </div>
+
 
     <footer>
         <p>Estos proyectos son parte de mi aprendizaje en desarrollo web frontend.</p>
