Agregado un las caracterisitcias de un formulario base formulario

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
       <a href="switch-light/index.html">Ver proyecto</a>
     </div>
 
+    <div class="project-card">
+      <h2>Formulario</h2>
+      <p>Formulario</p>
+      <a href="formulario/index.html">Ver proyecto</a>
+    </div>
 
     <footer>
         <p>Estos proyectos son parte de mi aprendizaje en desarrollo web frontend.</p>
