Prototipo de una pagina web

--- a/index.html
+++ b/index.html
@@ -97,9 +97,16 @@
 
     <div class="project-card">
       <h2>Formulario</h2>
-      <p>Formulario</p>
+      <p>Prototipo de un Formulario</p>
       <a href="formulario/index.html">Ver proyecto</a>
     </div>
+
+     <div class="project-card">
+      <h2>Pagina Web</h2>
+      <p>Prototipo de una Pagina Web</p>
+      <a href="PaginaWeb/index.html">Ver proyecto</a>
+    </div>
+
 
     <footer>
         <p>Estos proyectos son parte de mi aprendizaje en desarrollo web frontend.</p>
