Prototipo de una pagina web

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
      <div class="project-card">
       <h2>Pagina Web</h2>
       <p>Prototipo de una Pagina Web</p>
-      <a href="PaginaWeb/index.html">Ver proyecto</a>
+      <a href="Paginaweb/index.html">Ver proyecto</a>
     </div>
 
 
